<resources>
    <string name="app_name">AetherizedStoryMobileApp</string>
    <string name="map_api_key">AIzaSyDO3nopr0oxjHY0wya9GskQOETMw6-V63c</string>
    <string name="signup">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="logout">Logout</string>
    <string name="login_guest">Sign In as Guest</string>
    <string name="message_welcome_page">Share your story, share your life!</string>
    <string name="title_welcome_page">AetherizedStory</string>
    <string name="title_signup_page">Fill the Registration Data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="copyright">Aetherized Apps by Dimas</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="map">Map</string>



    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="addstory">Add to Story</string>
    <string name="addDesc">Add Description</string>

    <string name="unavailable_feature">This feature is currently under development!</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Keywords</string>
    <string name="search_button">Find User</string>
    <string name="avatar_name">Full Name</string>
    <string name="avatar_username">Username</string>
    <string name="avatar_story">Story</string>
    <string name="story_description">Story Description</string>
    <string name="story_time">Story Time</string>

    <string name="botNavTitle1">Feeds</string>
    <string name="botNavTitle2">Add Story</string>
    <string name="botNavTitle3">Profile</string>
    <string name="toolBarTitle1">Story Feeds</string>
    <string name="toolBarTitle2">Add Story</string>
    <string name="toolBarTitle3">My Profile</string>
    <string name="addFavorites">Add to Favorites</string>
    <string name="inFavorites">In Favorites</string>
    <string name="added">Added to Favorites</string>
    <string name="removed">Removed from Favorites</string>
    <string name="unremoved">Remove Failed</string>

    <string name="retry">Retry</string>


    <string name="enable_location">Enable Location</string>
    <string name="prefs_dark_light_mode">Dark/Light Mode</string>
    <string name="prefs_dark_mode_about">Dark Mode</string>
    <string name="prefs_light_mode_about">Light Mode</string>
    <string name="prefs_home_page">Home Page</string>
    <string name="prefs_home_page_about">Choose the first tab to be displayed</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_menu_item1">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>